--- a/app/templates/app/cs html/login.html
+++ b/app/templates/app/cs html/login.html
@@ -12,13 +12,15 @@ color:#00FF00;>
 Login
 </h1>
 <form name="login">
-Username<input type="text" name="userid"/>
-Password<input type="password" name="pswrd"/>
+Username<input type="text" name="userid"/> <br>
+Password<input type="password" name="pswrd"/> <br>
 <input type="button" onClick="check(this.form)" value="Login"/>
 <input type="button" value="Create an account"/>
+<A HREF="CreateAnAccount.html">Create an account</A>
 <A HREF="recovery.html">forgot password or username</A>
 
 </form>
+
 <script language="javascript">
 function check(form)
 {
