Added more js libraries

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
+    <script src="{% static 'app/scripts/bootstrap.min.js'%}"></script>
+    <script src="{% static 'app/scripts/moment-2.15.2.js'%}"></script>
+    <script src="{% static 'app/scripts/bootstrap-datepicker.js'%}"></script>
 </head>
 
 <body>
