--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -2,60 +2,62 @@
 
 {% block content %}
 
-<h2>{{ title }}</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            <form action="." method="post" class="form-horizontal">
-                {% csrf_token %}
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">User name</label>
-                    <div class="col-md-10">
-                        {{ form.username }}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_password" class="col-md-2 control-label">Password</label>
-                    <div class="col-md-10">
-                        {{ form.password }}
-                    </div>
-                </div>
-                 <script>
-                  $(function() {
-                    $( ".datepicker" ).datepicker({
-                      changeMonth: true,
-                      changeYear: true,
-                      yearRange: "1900:2012",
-                      // You can put more options here.
+<head>
+<title>
+Login page
+</title>
 
-                    });
-                  });
-                  </script>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="hidden" name="next" value="/" />
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                {% if form.errors %}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                {% endif %}
-            </form>
-        </section>
+</head>
+
+<body>
+<h1 style="font-family:Comic Sans" Ms;text-align="center";font-size:20pt;
+color:#00FF00;>
+Login
+</h1>
+<form name="login">
+    <div class="form-group">
+        <label for="id_username" class="col-md-2 control-label">User name</label>
+         <div class="col-md-10">
+             {{ form.username }}
+         </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm"></section>
+    <div class="form-group">
+        <label for="id_password" class="col-md-2 control-label">Password</label>
+            <div class="col-md-10">
+                {{ form.password }}
+            </div>
     </div>
-</div>
+    <input type="button" onClick="check(this.form)" value="Login"/>
+</form>
 
-{% endblock %}
+<form action='newaccount' method="GET">
+    <input type="button" onClick="create(this.form)" value="Create account"/>
+</form>
 
+<form name="login">
+    {#<a href="{% url 'newaccount' %}">Create an account</a>#}
+    <a href="{% url 'recovery' %}">Forgot your password?</a>
 
-{% block scripts %}
+</form>
 
-    {% load staticfiles %}
-<script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
+<script language="javascript">
+function create(form) {
+    window.location.href = "{% url 'newaccount' %}";
+}
+
+function check(form)
+{
+
+ if(form.id_username.value == "myname" && form.id_password.value == "123456")
+  {
+     window.location.href = "{% url 'home' %}";
+  }
+ else
+ {
+   alert("Error Password or Username")
+  }
+}
+</script>
+</body>
 
 {% endblock %}
