changed values for choosing grade
Changed values for the choose grade option.  Previously sophomore and
senior both had values of 'S'.

--- a/app/templates/app/cs html/profile.html
+++ b/app/templates/app/cs html/profile.html
@@ -42,11 +42,11 @@ Write your text profile <br>
  <div class="row">
                  <div class="col-sm-4">  
                     <select name="Grade">
-                    <option value="G">Chose grade</option>
-                       <option value="F">Freshmen</option>
-                       <option value="S">Sophomore</option>
-                       <option value="J">Junior</option>
-                       <option value="S">Senior</option>
+                    <option value="Gr">Chose grade</option>
+                       <option value="Fr">Freshmen</option>
+                       <option value="So">Sophomore</option>
+                       <option value="Ju">Junior</option>
+                       <option value="Se">Senior</option>
                     
                     </select> 
                  </div> <br>  
