--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -14,10 +14,71 @@ Profile
 <FORM method="post">
     {% csrf_token %}
         <table>
-            {{ proileTable.as_table }}
+            {{ profileTable.as_table }}
         </table>
+
+    <div class="row">
+        <div class="col-sm-4">  
+            <div id='class'>
+                <select id="slct2" name="slct2">
+                    <option value="SD">Select class</option>
+                </select>
+            </div> 
+        </div>
+    </div>
+
+    <br />
+    <input name='class' type='button' id='add' value='Add Classes' class="btn btn‐default"/>
+
+    <p> 
+        <br />
+        <input name="Done" TYPE="submit" VALUE="Done" class="btn btn‐default" />
+    </p>
 </FORM>
 
+     
+
+
+
+<script>
+function populate(s1,s2){
+	var s1 = document.getElementById(s1);
+	var s2 = document.getElementById(s2);
+	s2.innerHTML = "";
+	if(s1.value == "IE"){
+		var optionArray = ["Select class| Select class","IE481|IE481","IE4xx2|IExx2","IExx3|IExx3","IExx4|IExx4"];
+	} else if(s1.value == "ME"){
+		var optionArray = ["Select class| Select class","MExxx|MExxx","ME4xx2|MExx2","MExx3|MExx3","MExx4|MExx4"];
+	} else if(s1.value == "DE"){
+		var optionArray = ["Select class| Select class","DExxx|DExxx","DE4xx2|DExx2","DExx3|DExx3","DExx4|DExx4"];
+	}
+	for(var option in optionArray){
+		var pair = optionArray[option].split("|");
+		var newOption = document.createElement("option");
+		newOption.value = pair[0];
+		newOption.innerHTML = pair[1];
+		s2.options.add(newOption);
+	}
+}
+</script>
+
+<script type="text/javascript">
+
+var item = document.getElementById('class');    
+
+document.getElementById('add').onclick = function () {
+
+  var input = document.createElement('select'),
+      div = document.createElement('div');
+ input.innerHTML = document.getElementById("slct2").innerHTML;
+  
+  div.appendChild(input);
+  //...
+
+  item.appendChild(div);
+
+};
+</script>
 
 </body>
 
