--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,15 +6,14 @@
 <h3>{{ message }}</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Iowa State<br />
+    Iowa State<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    1-800-IOWA-STATE
 </address>
 
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
 
 {% endblock %}
