change to profile html page

--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -6,11 +6,13 @@
     <title>GroupApp</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap-select.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.min.js'%}"></script>
     <script src="{% static 'app/scripts/moment-2.15.2.js'%}"></script>
     <script src="{% static 'app/scripts/bootstrap-datepicker.js'%}"></script>
+    <script src="{% static 'app/scripts/bootstrap-select.min.js'%}"></script>
 </head>
 
 <body>
