--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -14,24 +14,17 @@ Login page
 color:#00FF00;>
 Login
 </h1>
-<form name="login">
-    <div class="form-group">
-        <label for="id_username" class="col-md-2 control-label">User name</label>
-         <div class="col-md-10">
-             {{ form.username }}
-         </div>
-    </div>
-    <div class="form-group">
-        <label for="id_password" class="col-md-2 control-label">Password</label>
-            <div class="col-md-10">
-                {{ form.password }}
-            </div>
-    </div>
-    <input type="button" onClick="check(this.form)" value="Login"/>
-</form>
+    <FORM method="post">
+    {% csrf_token %}
+        <table>
+            {{ myForm.as_table }}
+        </table>
+        <p> <input name="Send" TYPE="submit" VALUE="Login"
+    class="btn btn?default" /></p>
+    </FORM>
 
 <form action='newaccount' method="GET">
-    <input type="button" onClick="create(this.form)" value="Create account"/>
+    <a href="{% url 'newaccount' %}">New User</a>
 </form>
 
 <form name="login">
@@ -40,24 +33,7 @@ Login
 
 </form>
 
-<script language="javascript">
-function create(form) {
-    window.location.href = "{% url 'newaccount' %}";
-}
 
-function check(form)
-{
-
- if(form.id_username.value == "myname" && form.id_password.value == "123456")
-  {
-     window.location.href = "{% url 'home' %}";
-  }
- else
- {
-   alert("Error Password or Username")
-  }
-}
-</script>
 </body>
 
 {% endblock %}
