--- a/app/templates/app/classPage.html
+++ b/app/templates/app/classPage.html
@@ -39,12 +39,13 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send</button>
+                <p> <input name="Send" TYPE="submit" VALUE="Send" class="btn btn?default" /></p>
               </div>
             </div>
           </div>
         </div>
     </div>
+
     <div class="col-sm-2 sidenav">
       <div class="well">
         <p>Class 1</p>
