--- a/app/templates/app/loginpartial.html
+++ b/app/templates/app/loginpartial.html
@@ -1,8 +1,9 @@
-{% if request.user.is_authenticated %}
+{% if request.session.username %}
 <form id="logoutForm" action="/logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
-        <li><span class="navbar-brand">Hello {{ user.username }}!</span></li>
+        <li><span class="navbar-brand">Hello {{ request.session.username }}!</span></li>
+        <li><a href="{% url 'profile' %}">Profile</a></li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
 
