--- a/app/templates/app/loginpartial.html
+++ b/app/templates/app/loginpartial.html
@@ -4,6 +4,7 @@
     <ul class="nav navbar-nav navbar-right">
         <li><span class="navbar-brand">Hello {{ request.session.username }}!</span></li>
         <li><a href="{% url 'profile' %}">Profile</a></li>
+        <li><a href="{% url 'messages' %}">Messages</a></li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
 
