--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -50,16 +50,16 @@
             </div>
             <form method="post">
                 {% csrf_token %}
-                <select class="form-control" id="addclass">
+                <select class="form-control" id="addclass" name="addclass">
                     {% for r in classes %}
                         <option>{{ r.classSec }}</option>
                     {% endfor %}
                 </select>
-                <input name="Done" TYPE="submit" VALUE="Add" class="btn btn?default" />
-            </form>  
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <input name="Done" TYPE="submit" VALUE="Add" class="btn btn?default" />
                 </div>
+            </form>  
         </div>
     </div>
 </div>
