--- a/app/templates/app/messages.html
+++ b/app/templates/app/messages.html
@@ -5,15 +5,22 @@
   <div class="row content">
     <div class="col-sm-2 sidenav">
     </div>
-    <div class="col-sm-8 text-left"> 
+    <div class="col-sm-8 text-left">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} 
       <h1>Messages for {{ request.session.username }}</h1>
 
      <div class="panel-group">
-         {% for m in messages %}
+         {% for m in inbox %}
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a data-toggle="collapse" href="#{{m.id}}">From: {{m.sender}}</a>
+                <a data-toggle="collapse" href="#{{m.id}}">From: {{m.sender}}   Subject:{{m.subject}}</a>
               </h4>
             </div>
             <div id={{m.id}} class="panel-collapse collapse">
@@ -42,6 +49,15 @@
   </div>
         <div class="col-sm-2 sidenav">
             <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#sendMessage">Compose Message</button>
+            <p></p>
+            <h5>Classes:</h5>
+            <table>
+                {% for v in data %}
+                    <tr>
+                        <td style="padding:10px">{{ v.classSec }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
         </div>
   </div>
 </div>
