--- a/app/templates/app/messages.html
+++ b/app/templates/app/messages.html
@@ -20,7 +20,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a data-toggle="collapse" href="#{{m.id}}">From: {{m.sender}}   Subject:{{m.subject}}</a>
+                <a data-toggle="collapse" href="#{{m.id}}">From: {{m.sender}}   <br />Subject: {{m.subject}}</a>
               </h4>
             </div>
             <div id={{m.id}} class="panel-collapse collapse">
